style.css
@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');

* {
  box-sizing: border-box;
}
:root {
  --primary-color: #f5E050;
  --text-color: #111827;
  --width-break: 600px;

}

body {
  margin: 0;
  font-family: 'Comic Neue', cursive;
  color: var(--text-color);

}

.nav-bar {
  background-color: var(--primary-color);

  padding: 40px;

  text-align: center;
  border-radius: 1rem;
}
nav .nav-text {
  font-size: 2rem;
  
  padding: 1 rem;
}

.main-content {
  margin: auto;
  max-width: var(--width-break);
  padding: 2rem;
}
textarea {
  display: block;
  width: 100%;
  min-height: 20vh;
  font-size: large;
  font-family: inherit;
}
button {
  background-color: var(--primary-color);
  border: none;
  margin: 1rem 1rem;
  padding: 1rem 2rem;
  border-radius: 0.5rem;
  font-family: inherit;
}
button :hover{
  opacity: 0.7;
 cursor: pointer;
 
}
#output{
  box-sizing: border-box;
border: 1px solid black ;
width: 100%;
min-height: 10vh;
max-height: 20vh;
overflow: scroll;
}
.ftr-about{
  position: fixed;
  
bottom: 0;

 width: 100%;
padding: 1rem;
 background-color: var(--primary-color); 
text-align: center;
border-radius: 1rem;
justify-content: center;
z-index: +1;
}

.ftr-about p {
  max-width: var(--width-break);
  margin: auto;
}

.minion{
  width: 500px;
  max-height: 500px;
 position: absolute;
 z-index: -1;
 margin-right: 0px;
 margin-left: 66rem;

}
.credits{
  margin: auto;
 max-width: var(--width-break);
 

}
a{
  
  text-decoration: none;
  color: var(--text-color);
}

